--- a/index.html
+++ b/index.html
@@ -2,8 +2,6 @@
 <html lang="en">
     <!--
         CHANGE THE FOLLOWING:
-        title
-        header title
         Description
         Questions
         Video Walkthrough Link
@@ -16,7 +14,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EXERCISE TEMPLATE</title>
+    <title>Creating Variables</title>
     <link href='http://fonts.googleapis.com/css?family=Roboto+Mono' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="style.css">
@@ -29,16 +27,15 @@
 
 <body>
     <header>
-        <h1>EXERCISE TEMPLATE</h1>
-        <a href="https://www.youtube.com/channel/UCIWpDzONMC65Mad1YSwcpiQ"><img src="images/i_dev_fish.svg" alt="Ichthyological Dev logo"></a>
+        <h1>Creating Variables</h1>
+        <a href="https://www.youtube.com/channel/UCIWpDzONMC65Mad1YSwcpiQ" target="_blank"><img src="images/i_dev_fish.svg" alt="Ichthyological Dev logo"></a>
     </header>
     <main>
         <section>
             <div class="description card">
                 <h2>Description</h2>
-                <p>Welcome to the Template Exercise! This exercise doesn't cover anything, since it's a template!
-                    You should use this as a basis for vanilla JS exercises. Read through the various files to get
-                    a sense for how everything works.</p>
+                <p>Welcome to the Creating Variables Exercise! This exercise will give you practice using "const" 
+                    and "let" to instantiate variables.</p>
             </div>
             <div class="instructions card">
                 <h2>Instructions</h2>
@@ -51,59 +48,59 @@
             <div class="problem-container card">
                 <h2 class="card-header">Questions</h2>
                 <div class="question card">
-                    <p class="prompt">Do Ichthyologists study fish, birds, or mammals?</p>
+                    <p class="prompt">How many days have you been a developer?</p>
                     <p class="result"></p>
                 </div>
                 <div class="question card">
-                    <p class="prompt">What is your name?</p>
+                    <p class="prompt">What is the genus of the Largemouth Bass?</p>
                     <p class="result"></p>
                 </div>
                 <div class="question card">
-                    <p class="prompt">How many oceans are there?</p>
+                    <p class="prompt">True or false, you should use the "var" keyword instead of "const" or "let" to create variables.</p>
                     <p class="result"></p>
                 </div>
                 <div class="question card">
-                    <p class="prompt">True or false, you are having fun wielding your knowledge of JavaScript data types!</p>
+                    <p class="prompt">Roughly how many gallons of water are on Earth?</p>
                     <p class="result"></p>
                 </div>
                 <div class="question card">
-                    <p class="prompt">What is the state fish of Hawaii? (The one that's fun to say!)</p>
+                    <p class="prompt">Instantiate a variable, variablesThusFar, with the total number of variables you made before this question.</p>
                     <p class="result"></p>
                 </div>
                 <div class="question card">
-                    <p class="prompt">How many kilometers long is the Congo River?</p>
+                    <p class="prompt">How many feet are in a fathom?</p>
                     <p class="result"></p>
                 </div>
                 <div class="question card">
-                    <p class="prompt">True or false, you have caught a fish.</p>
+                    <p class="prompt">What is the plural of fish if we're talking about different species?</p>
                     <p class="result"></p>
                 </div>
                 <div class="question card">
-                    <p class="prompt">The largest regular number that JavaScript can reliably handle is 9007199254740991. Make a BigInt that's larger!</p>
+                    <p class="prompt">Update timeAsDev to represent how many days you've been a developer at the end of next week.</p>
                     <p class="result"></p>
                 </div>
                 <div class="question card">
-                    <p class="prompt">True or false, JavaScript is rarely used in large tech companies.</p>
+                    <p class="prompt">True or false, instantiating a variable with the let keyword allows you to change the value later. </p>
                     <p class="result"></p>
                 </div>
                 <div class="question card">
-                    <p class="prompt">True or false, you can use the BigInt with decimals.</p>
+                    <p class="prompt">What is the default value of a variable in JavaScript?</p>
                     <p class="result"></p>
                 </div>
                 <div class="question card">
-                    <p class="prompt">How would you store the answer to (9007199254740992 + 1) as a BigInt?</p>
+                    <p class="prompt">What's the difference between null and undefined?</p>
                     <p class="result"></p>
                 </div>
                 <div class="question card">
-                    <p class="prompt">How many species of salmon are native to North America?</p>
+                    <p class="prompt">If someone is signing up for a user account, and leaves a field blank, what value should you assign to it?</p>
                     <p class="result"></p>
                 </div>
                 <div class="question card">
-                    <p class="prompt">What is the longest river in the world?</p>
+                    <p class="prompt">Update variablesThusFar with the new number of variables you've made so far. </p>
                     <p class="result"></p>
                 </div>
                 <div class="question card">
-                    <p class="prompt">True or false, the previous requirements covered all possible JavaScript data types.</p>
+                    <p class="prompt">True or false, the stonefish gets its name because people use them as stepping stones.</p>
                     <p class="result"></p>
                 </div>
             </div>
@@ -130,7 +127,7 @@
             </section>
             <section class="card">
                 <h2>Still Floundering?</h2>
-                <p>You can find a video walkthrough on YouTube <a href="https://www.youtube.com/channel/UCIWpDzONMC65Mad1YSwcpiQ">here</a>. (UPDATE LINK)</p>
+                <p>You can find a video walkthrough on YouTube <a href="https://www.youtube.com/channel/UCIWpDzONMC65Mad1YSwcpiQ" target="_blank">here</a>. (UPDATE LINK)</p>
                 <p>A working solution is available on the "solution" branch of this repository.</p>
             </section>
         </aside>
