--- a/index.html
+++ b/index.html
@@ -122,12 +122,12 @@
                     <li>Check for errors in your browser's Developer Tools!</li>
                     <li>Use a debugger!</li>
                     <li>Follow the problem solving steps.</li>
-                    <li>Check out this basic troubleshooting video. (ADD LINK)</li>
+                    <li>Check out this  <a href="https://youtu.be/PIi3aCqOvQE" target="_blank">basic troubleshooting video</a>.</li>
                 </ul>
             </section>
             <section class="card">
                 <h2>Still Floundering?</h2>
-                <p>You can find a video walkthrough on YouTube <a href="https://www.youtube.com/channel/UCIWpDzONMC65Mad1YSwcpiQ" target="_blank">here</a>. (UPDATE LINK)</p>
+                <p>You can find a video walkthrough on YouTube <a href="https://www.youtube.com/channel/UCIWpDzONMC65Mad1YSwcpiQ" target="_blank">here</a>.</p>
                 <p>A working solution is available on the "solution" branch of this repository.</p>
             </section>
         </aside>
